<resources>
    <string name="app_name">Symptoms</string>
    <string name="edit">Editar</string>
    <string name="save">Guardar</string>
    <string name="update">Actualizar</string>
    <string name="delete">Eliminar</string>
    <string name="accept">Aceptar</string>
    <string name="cancel">Cancelar</string>
    <string name="date">Fecha</string>
    <string name="time">Hora</string>
    <string name="load_more">Cargar más</string>
    <string name="value_successfully_saved">Valor guardado exitosamente</string>
    <string name="value_successfully_updated">Valor actualizado exitosamente</string>
    <string name="value_saving_failed">El valor no se pudo guardar exitosamente</string>
    <string name="check_input_values">Por favor revise que los campos ingresados son correctos</string>
    <string name="value_updating_failed">El valor no se pudo actualizar exitosamente</string>
    <string name="done">Listo</string>
    <string name="continue_text">Continuar</string>
    <string name="warning">ALERTA</string>
    <string name="storage_permission_denied">Permiso denegado</string>
    <string name="name">Nombre</string>
    <string name="first_last_name">Primer apellido</string>
    <string name="second_last_name">Segundo apellido</string>
    <string name="id_number">Número de cédula</string>
    <string name="birth_day">Fecha de nacimiento</string>
    <string name="user_info">Información necesaria para los reportes:</string>
    <string name="fields_not_filled">Todos los campos son requeridos</string>
    <string name="not_specified_info">Todos los campos son requeridos</string>
    <string name="bundle_key">UserInfoAsked</string>
    <string name="info_asked_once">Esta información sólo se solicita una vez.</string>
    <string name="sp_body_type">body_type</string>
    <string name="sp_user_name">user_name</string>
    <string name="sp_user_first_last_name">user_first_last_name</string>
    <string name="sp_user_second_last_name">user_second_last_name</string>
    <string name="sp_user_id">user_id</string>
    <string name="sp_user_birth_date">user_birth_date</string>
    <string name="pdf_document_name">SymptomsApp_Historial_</string>
    <string name="date_range_dialog">Rango de fechas a considerar</string>
    <string name="no_symptoms_registered">No hay síntomas registrados dentro del rango de fechas seleccionado</string>
    <string name="no_glucose_registered">No hay tomas de glucosa en sangre registradas dentro del rango de fechas seleccionado</string>
    <string name="no_pressure_registered">No hay tomas de presión sanguínea registradas dentro del rango de fechas seleccionado</string>
    <string name="pdf_extension">pdf</string>
    <string name="start_date">Desde: </string>
    <string name="end_date">Hasta: </string>
    <string name="date_range">Fechas consideradas</string>
    <string name="pdf_saved">Documento guardado en</string>
    <string name="pdf_title">Symptoms App</string>
    <string name="glucose_title">Glucosa en sangre</string>
    <string name="pressure_title">Presión Sanguínea</string>
    <string name="symptom_title">Síntomas</string>
    <string name="table_date_column">Fecha de muestra</string>
    <string name="glucose_table_value_column">Valor ml/dl</string>
    <string name="pressure_table_systolic_column">Valor Sístole</string>
    <string name="pressure_table_diastolic_column">Valor Diástole</string>
    <string name="pdf_success">Reporte PDF generado con éxito</string>
    <string name="pdf_failure">Ocurrió un problema al general el PDF</string>
    <string name="start_symptom_date_time">Fecha y hora de inicio del síntoma:</string>
    <string name="end_symptom_date_time">Fecha y hora de finalización del síntoma:</string>
    <string name="symptom_duration">Duración del síntoma:</string>
    <string name="patient">Paciente: </string>
    <string name="id">Cédula: </string>
    <string name="birth_day_info">Fecha de nacimiento: </string>
    <string name="pdf_subtitle">Reporte de síntomas, glucosa en sangre y presión arterial</string>
    <string name="delete_symptom">Borrar síntoma</string>
    <string name="edit_symptom">Editar síntoma</string>
    <string name="finish_symptom">Finalizar síntoma</string>
    <string name="symptom_menu_title">Selección de síntoma</string>
    <string name="symptom_form">Registro de síntoma</string>
    <string name="symptom_description">Descripción del Síntoma:</string>
    <string name="symptom_description_hint">Describa brevemente el síntoma</string>
    <string name="intensity">Intensidad:</string>
    <string name="low">Baja</string>
    <string name="medium">Media</string>
    <string name="high">Alta</string>
    <string name="intermittent">¿Intermitente?</string>
    <string name="start">Fecha/Hora inicio:</string>
    <string name="duration">Duración del padecimiento:</string>
    <string name="duration_hint">Indique las horas (se puede llenar luego)</string>
    <string name="reaction_medicament">Medicamento causante:</string>
    <string name="reaction_medicament_hint">Nombre del medicamento</string>
    <string name="reaction_food">Alimento causante:</string>
    <string name="reaction_food_hint">Nombre del alimento</string>
    <string name="pdf_menu">Generar PDF</string>
    <string name="detailed_description">Descripción detallada</string>
    <string name="reminder_set_format">No se registró duración, se le recordará sobre este síntoma en %d horas</string>
    <string name="incomplete_form_message">El campo de descripción es requerido, por favor ingrese algún valor</string>
    <string name="glucose_history_title">Historial de Glucosa</string>
    <string name="glucose_measure">mmol/L</string>
    <string name="pressure_history_title">Historial de Presión</string>
    <string name="pressure_measure_diastolic">Diástole</string>
    <string name="pressure_measure_systolic">Sístole</string>
    <string name="action_settings">Configuraciones</string>
    <string name="action_about">Acerca de</string>
    <string name="menu_name">Menu</string>
    <string name="developed_by">Desarrollado por</string>
    <string name="symptom_reminder_format">El síntoma %s registrado el día %s se encuentra activo. Ingrese a la aplicación para realizar el cambio correspondiente</string>
    <string name="frequency_title">Recordatorio de síntomas</string>
    <string name="frequency_summary">Horas luego de registrar un síntoma sin finalización</string>
    <string name="notifications_frequency">Frecuencia de notificaciones</string>
    <string name="notifications_frequency_summary">Recordar síntomas sin finalización cada ciertas horas</string>
    <string name="title_activity_glucose_form">GlucoseForm</string>
    <string name="glucose_form_title">Registro de Glucosa</string>
    <string name="intent_key_glucose_id">glucose_id</string>
    <string name="blood_pressure_button">Presión</string>
    <string name="glucose_button">Glucosa</string>
    <string name="history_button">Historial</string>
    <string name="blood_pressure_form_title">Registro de Presión Arterial</string>
    <string name="intent_key_pressure_id">pressure_id</string>
    <string name="blood_pressure_alert_message">Los valores ingresados indican que presenta una presión arterial de %s \n\n Se le recomienda consultar a su medico.</string>
    <string name="select_body_message">Deslice y seleccione</string>
    <string name="selection_is_needed">Por favor seleccione un tipo de cuerpo</string>
    <string name="alert_sure_about_deleting">¿Seguro que desea eliminar este síntoma?</string>
    <string name="level_column">Nivel</string>
    <string name="fasting_test">En ayunas</string>
    <string name="tolerance_test">Postcomida</string>
    <string name="bottom_sheet_title">Tamaño del área de dolor</string>
    <string name="preference_reminder_frequency_key">reminder_frequency</string>
    <string name="preference_selected_body_type_key">selected_body_type</string>
    <string name="preference_selected_body_type_male">male</string>
    <string name="preference_selected_body_type_female">female</string>
    <string name="preference_reminder_frequency_default">8</string>
    <string name="sample_date">Miércoles 15 de Febrero</string>
    <string name="sample_hour">21:00</string>
    <string name="sample_pressure_diastolic_value">#</string>
    <string name="sample_glucose_measure">#</string>
    <string name="sample_pressure_systolic_value">90</string>
    <string name="sample_calendar_day">02</string>
    <string name="blood_pressure_category_normal">Normal</string>
    <string name="blood_pressure_category_elevated">Elevada</string>
    <string name="blood_pressure_category_hypertension_stage_1">Hipertensión: Etapa 1</string>
    <string name="blood_pressure_category_hypertension_stage_2">Hipertensión: Etapa 2</string>
    <string name="blood_pressure_category_hypotension">Hipotensión</string>
    <string name="glucose_level_normal">Normal</string>
    <string name="glucose_level_prediabetes">Prediabetes</string>
    <string name="glucose_level_diabetes">Diabetes</string>
    <string name="pain_type">Tipo de dolor</string>
    <string name="digestive_pain">Padecimiento digestivo</string>
    <string name="respiratory_pain">Padecimiento respiratorio</string>
    <string name="sensory_pain">Padecimiento sensorial</string>
    <string name="emotional_pain">Padecimiento emocional</string>
    <string name="dermatological_pain">Padecimiento dermatológico</string>
    <string name="triggering_activity">Actividad detonante</string>
    <string name="triggering_feeling">Emoción detonante</string>
    <string name="triggering_weather_condition">Estado climático detonante</string>
    <string name="sharp_pain">Agudo</string>
    <string name="throbbing_pain">Punzante</string>
    <string name="palpitating_pain">Palpitante</string>
    <string name="oppressive_pain">Opresivo</string>
    <string name="electric_pain">Eléctrico</string>
    <string name="sickness">Náuseas</string>
    <string name="bad_breath">Mal aliento</string>
    <string name="heartburn">Agruras</string>
    <string name="sourness">Acidez</string>
    <string name="reflux">Reflujo</string>
    <string name="inflammation">Inflamación</string>
    <string name="constipation">Estreñimiento</string>
    <string name="diarrhea">Diarrea</string>
    <string name="vomit">Vómito</string>
    <string name="difficulty_to_swallow">Dificultad para tragar</string>
    <string name="bleeding">Sangrado</string>
    <string name="incontinence">Incontinencia</string>
    <string name="mouth_ulcers">Úlceras bucales</string>
    <string name="shortness_of_breath">Falta de aire</string>
    <string name="flu">Catarro</string>
    <string name="cough">Tos</string>
    <string name="phlegm">Flema</string>
    <string name="congestion">Congestión</string>
    <string name="irritation">Irritación</string>
    <string name="hissing">Silbido</string>
    <string name="dizziness">Mareo</string>
    <string name="visual_disturbances">Alteraciones visuales</string>
    <string name="hearing_disturbances">Alteraciones auditivas</string>
    <string name="tingling">Hormigueo</string>
    <string name="numbness">Adormecimiento</string>
    <string name="rigidity">Rigidez</string>
    <string name="heaviness">Pesadez</string>
    <string name="weakness">Debilidad</string>
    <string name="anxiety">Ansiedad</string>
    <string name="depression">Despresión</string>
    <string name="insomnia">Insomnio</string>
    <string name="drowsiness">Somnolencia</string>
    <string name="humor_changes">Cambios de humor</string>
    <string name="exhaustion">Agotamiento</string>
    <string name="bruising">Hematomas</string>
    <string name="rash">Sarpullido</string>
    <string name="spots">Manchas</string>
    <string name="redness">Enrojecimiento</string>
    <string name="acne">Acné</string>
    <string name="hair_loss">Caída del cabello</string>
    <string name="ulcers">Úlceras</string>
</resources>