<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.project.symptoms.activity.MainActivity">

    <item
        android:icon="@drawable/ic_menu"
        app:showAsAction="always"
        android:id="@+id/menu"
        android:title="@string/menu_name">

        <menu>

            <item
                android:id="@+id/action_settings"
                android:title="@string/action_settings"
                android:icon="@drawable/ic_settings"
                app:showAsAction="ifRoom" />
            <item
                android:id="@+id/action_about"
                android:title="@string/action_about"
                android:icon="@drawable/ic_info"
                app:showAsAction="ifRoom" />

            <item
                android:id="@+id/action_pdf"
                android:title="@string/pdf_menu"
                android:icon="@drawable/ic_pdf"
                app:showAsAction="ifRoom" />

        </menu>

    </item>
</menu>
