<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/colorMainGreen">

    <TextView
        android:layout_marginTop="25dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_info"
        android:textSize="30sp"
        android:gravity="center"
        android:paddingHorizontal="10dp"
        android:fontFamily="@font/montserrat"
        android:textColor="@color/colorMainWhite"/>

    <LinearLayout
        android:padding="10dp"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="25dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/user_name"
            android:textSize="20sp"
            android:inputType="text"
            android:textColorHint="@color/colorWhiteHint"
            android:backgroundTint="@color/colorMainWhite"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:textColor="@color/colorMainWhite"
            android:fontFamily="@font/montserrat"
            android:layout_marginVertical="8dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="8">

            <EditText
                android:id="@+id/user_first_last_name"
                android:textSize="20sp"
                android:inputType="text"
                android:textColorHint="@color/colorWhiteHint"
                android:backgroundTint="@color/colorMainWhite"
                android:layout_width="0dp"
                android:layout_weight="4"
                android:layout_height="wrap_content"
                android:hint="@string/first_last_name"
                android:textColor="@color/colorMainWhite"
                android:fontFamily="@font/montserrat"
                android:layout_marginVertical="8dp"/>
            <EditText
                android:id="@+id/user_second_last_name"
                android:textSize="20sp"
                android:inputType="text"
                android:textColorHint="@color/colorWhiteHint"
                android:backgroundTint="@color/colorMainWhite"
                android:layout_width="0dp"
                android:layout_weight="4"
                android:layout_height="wrap_content"
                android:hint="@string/second_last_name"
                android:textColor="@color/colorMainWhite"
                android:fontFamily="@font/montserrat"
                android:layout_marginVertical="8dp"/>

        </LinearLayout>

        <EditText
            android:id="@+id/user_id"
            android:textSize="20sp"
            android:inputType="number"
            android:textColorHint="@color/colorWhiteHint"
            android:backgroundTint="@color/colorMainWhite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/id_number"
            android:textColor="@color/colorMainWhite"
            android:fontFamily="@font/montserrat"
            android:layout_marginVertical="8dp"/>

        <TextView
            android:id="@+id/textView2"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/birth_day"
            android:textColor="@color/colorMainWhite"
            android:layout_marginVertical="8dp"/>

        <TextView
            android:id="@+id/user_birth_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/text_view_style_2"
            android:drawableEnd="@drawable/ic_history_2"
            android:fontFamily="@font/montserrat"
            android:padding="15dp"
            android:textColor="@color/colorMainWhite"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

    <Button
        android:id="@+id/finish_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/login_button"
        android:text="@string/continue_text"
        android:textColor="@color/colorMainWhite"
        android:paddingHorizontal="25dp"
        android:paddingVertical="15dp"/>

    <TextView
        android:layout_marginTop="25dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/info_asked_once"
        android:textSize="16sp"
        android:gravity="center"
        android:paddingHorizontal="10dp"
        android:fontFamily="@font/montserrat"
        android:textColor="@color/colorMainWhite"/>

</LinearLayout>