<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:gravity="center"
    android:orientation="horizontal"
    android:background="@drawable/main_menu_style"
    tools:context=".MainMenuFragment">

    <TextView
        android:layout_marginStart="@dimen/fab_margin"
        android:fontFamily="@font/montserrat"
        android:layout_weight="1"
        android:id="@+id/blood_pressure_text"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/blood_pressure_button"
        android:textAlignment="center"
        android:textColor="@color/colorMainWhite"
        android:textSize="15sp"
        android:drawableStart="@drawable/ic_blood_pressure_icon" />

    <ImageView
        android:id="@+id/calendar_icon"
        android:src="@drawable/ic_history"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:padding="10dp"
        android:layout_weight="1"
        android:contentDescription="@string/history_button"
        android:tint="@color/colorMainWhite"/>

    <TextView
        android:layout_marginEnd="@dimen/fab_margin"
        android:fontFamily="@font/montserrat"
        android:id="@+id/glucose_text"
        android:layout_width="100dp"
        android:textAlignment="center"
        android:gravity="center"
        android:layout_height="match_parent"
        android:text="@string/glucose_button"
        android:textColor="@color/colorMainWhite"
        android:textSize="15sp"
        android:layout_weight="1"
        android:drawableEnd="@drawable/ic_glucose_icon"/>

</LinearLayout>